tests/functional/lang/eval-fail/fromJSON-overflowing.err.exp
error:
       … while calling the 'fromJSON' builtin
         at /pwd/lang/eval-fail/fromJSON-overflowing.nix:1:1:
            1| builtins.fromJSON ''{"attr": 18446744073709551615}''
             | ^
            2|

       error: unsigned json number 18446744073709551615 outside of Nix integer range
